add update user profile and fix achievements

--- a/src/views/Certification/Codeworks-Deloper-Certificate.hbs
+++ b/src/views/Certification/Codeworks-Deloper-Certificate.hbs
@@ -1,6 +1,6 @@
 <div id="ecd">
   <hr>
-  <h1><strong>ECD</h1></strong>
+  <h1><strong>Codeworks Digital </h1></strong>
 </div>
 <hr>
 <section class="section">
