--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -5,6 +5,18 @@
 <hr>
 <section class="section">
   <div class="container">
+    <p class="lead">Learners are required to plan, design and implement, a website which satisfies the given brief. Learners
+      should produce evidence at each stage of the development process. This should be recorded using the grids provided.
+      Learners should also provide evidence of the web pages that they have created through screenshots and printouts of
+      their code. An evidence checklist has been provided to allow the learner to keep track of their progress through the
+      task. This assessment should be carried out in controlled, supervised conditions. Learners should have access to reference
+      materials.
+    </p>
+    <hr>
+  </div>
+</section>  
+<section class="section">
+  <div class="container">
     <p class="lead">Glasgow Kelvin College is the newest of Glasgow’s three regional further education colleges. Formed by
       the merger of John Wheatley, North Glasgow and Stow colleges in November 2013, Glasgow Kelvin has all the expertise,
       facilities and resources to ensure that students receive a high quality learning experience that will provide them
@@ -15,6 +27,25 @@
       and abilities. So whatever your plans and career aspirations, Glasgow Kelvin is uniquely positioned to help you achieve
       your potential and realise your ambitions. Please take a good look at the exciting range of learning opportunities
       we have and think about how a course at Glasgow Kelvin could start you on the road to success.
+    </p>
+    <hr>
+  </div>
+</section>
+<section class="section">
+  <div class="container">
+    <p class="lead">
+      <section class="section">
+        <div class="container">
+          <p class="lead">Glasgow Kelvin College provides flexible learning opportunities to students and members of the
+            public to improve their digital skills. These courses are free and available to all and they would like a website
+            that informs potential learners about the courses that are available and how to access the opportunities. The
+            courses that the college offers can be split into three main categories: College Certification, SQA Certification
+            and ECDL (European Computer Driving Licence).
+          </p>
+          <hr>
+        </div>
+      </section>
+
     </p>
     <hr>
   </div>
