--- a/src/views/contact.hbs
+++ b/src/views/contact.hbs
@@ -22,7 +22,7 @@
             <hr>
             <h2>Fax: 0141 630 5001 Main </h2>
             <hr>
-            <h2>address: 2 Haghill Road, Glasgow G31 3SR</h2>
+            <h2>address: 1200 Westerhouse Rd,  Glasgow G34 9HZ</h2>
             <hr>
             <h2>Email: info@glasgowkelvin.ac.uk</h2>.
             <hr>
@@ -43,7 +43,7 @@
             <hr>
             <h2>Fax: 0141 630 5001 Main </h2>
             <hr>
-            <h2>address: 123 Flemington St Glasgow G21 4TD</h2>
+            <h2>address: 2 Haghill Rd,  Glasgow G31 3SR</h2>
             <hr>
             <h2>Email: info@glasgowkelvin.ac.uk</h2>.
             <hr>
@@ -64,7 +64,7 @@
             <hr>
             <h2>Fax: 0141 630 5001 Main </h2>
             <hr>
-            <h2>address: 75 Hotspur Street, Glasgow G20 8LJ</h2>
+            <h2>address: 123 Flemington St,  Glasgow G21 4TD</h2>
             <hr>
             <h2>Email: info@glasgowkelvin.ac.uk</h2>.
             <hr>
