--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -9,15 +9,15 @@
     <div class="carousel-item active">
       <img src="/img/pexels-photo-1438081.jpeg" alt="aply">
       <div class="carousel-caption d-none d-md-block">
-      <h3>COUSES OPEN NOW</h3>
-      <h1>FOR THIS YEAR</h1>
+        <h3>COUSES OPEN NOW</h3>
+        <h1>FOR THIS YEAR</h1>
+      </div>
     </div>
-    </div>  
     <div class="carousel-item">
       <img src="/img/smartmockups_jsqduow0.jpg" alt="aply">
       <div class="carousel-caption d-none d-md-block">
-      <h2>THE FASHION COLLECTIVE</h2>
-   </div>
+        <h2>THE FASHION COLLECTIVE</h2>
+      </div>
     </div>
     <div class="carousel-item">
       <img src="/img/pexels-photo-346809.jpeg" alt="aply">
@@ -36,87 +36,48 @@
   </a>
 </div>
 <hr>
-<button type="button" class="btn btn-danger btn-lg btn-block">Search All Courses</button>  
+<button type="button" class="btn btn-danger btn-lg btn-block">Search All Courses</button>
 <section id="main2" class="section">
   <div class="container">
     <h2 class="section-head">
       <i class="fas fa-main"></i>Search All Ours Cuorses For This Year 2019</h2>
     <hr class="my-4">
-    <p class="lead">Learners can take a range of courses at different levels and receive college certification and recognition
-      for learning. Introductory courses are for those with little or no experience of using a computer or digital device.
-      The introductory courses cover a range of skills such as using office  applications, file management up to developing
-      mobile apps and web pages. Intermediate courses build upon skills developed through the introductory courses and will
-      generally lead to preparing learners for ECDL assessments or further study in other programmes
-    </p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Glasgow Kelvin College </a>
-    <p class="text-light"> Learners are required to plan, design and implement, a website which satisfies the given brief.</p>
-    <img src="img/smartmockups_jsnmff9q.png" alt="smartckps">
-    <hr>
-  </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h2>College Certification</h2>
+          <p>Learners can take a range of courses at different levels and receive college certification and recognition for
+            learning. Introductory courses are for those with little or no experience of using a computer or digital device.
+            The introductory courses cover a range of skills such as using office applications, file management up to developing
+            mobile apps and web pages. Intermediate courses build upon skills developed through the introductory courses
+            and will generally lead to preparing learners for ECDL assessments or further study in other programmes </p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-6">
+          <h2>SQA</h2>
+          <p>The SQA units available in Flexible learning are aimed at SCQF levels 3 and 4. These units have been chosen
+            as they combine well with our introductory and intermediate college certificated courses. The level 3 courses
+            in Using A Keyboard and the NPA in Digital Literacies which comprises the Computer Basics, Digital Skills and
+            Computer Applications units. These can be achieved as stand-alone units but all three must be completed to receive
+            the NPA in Digital Literacies. At level 4 the PC Passport NPA again is comprised of three units: Web Apps: Word
+            Processing, Web Apps: Spreadsheets and Web Apps: Presentations. These again can be achieved as stand-alone units
+            but all three must be completed to receive the NPA.
+          </p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-6">
+          <h2>ECD</h2>
+          <p>The European Computer Driving Licence is an SCQF level 5 course made up of 7 units. All 7 units must be completed
+            to achieve your certificate. The units are mainly practical - from using office applications, managing files
+            and using the internet and email applications. There are also a couple of units which require you to demonstrate
+            knowledge and understanding of IT security and the fundamentals of using the operating system.
+          </p>
+          <p> <a class="btn btn-primary btn-lg" href="#" role="button">View details </a></p>
+        </div>
+      </div>
+      <a class="btn btn-primary btn-lg" href="#" role="button">Glasgow Kelvin College </a>
+      <hr>
+      <img src="img/smartmockups_jsnmff9q.png" alt="smartckps">
+      <hr>
+    </div>
 </section>
-
-<div class="container">
-  <div class="row">
-    <div class="col">
-
-    </div>
-    <div class="col">
-      Monday
-    </div>
-    <div class="col">
-      Tuesday
-    </div>
-    <div class="col">
-      Wednesday
-    </div>
-    <div class="col">
-      Thurday
-    </div>
-    <div class="col">
-      Friday
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      AM 9:30- 12:15
-    </div>
-    <div class="col">
-      NO Tutor
-    </div>
-    <div class="col">
-      Tutor on Duty
-    </div>
-    <div class="col">
-      Tutor on Duty
-    </div>
-    <div class="col">
-      Tutor on Duty
-    </div>
-    <div class="col">
-      Tutor on Duty
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      AM 9:30- 12:15
-    </div>
-    <div class="col">
-      NO Tutor
-    </div>
-    <div class="col">
-      Tutor on Duty
-    </div>
-    <div class="col">
-      Tutor on Duty
-    </div>
-    <div class="col">
-      Tutor on Duty
-    </div>
-    <div class="col">
-      Tutor on Duty
-    </div>
-  </div>
-</div>
-</div>
-<section class="card">
-  </div>
