--- a/src/views/media.hbs
+++ b/src/views/media.hbs
@@ -3,81 +3,190 @@
   <h1><strong>All Courses</h1></strong>
 </div>
 <section class="card">
-  <br>
-  <div class="container">
-    <h1 class="medio-title">Course Department</h1>
-  </div>
-  <br>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="one-third" style="background-image:url(img/pexels-photo-1458318.jpeg);height:300px;width:300px;border:0px;padding:0px;position:relative">
-          <div style="padding: 5px;background: rgba(0, 0, 0, 0.5);height: 50%;"> <a href="/College-certification" style="color:#fff;text-decoration:none;font-weight:bold;">
-              College Certification</a> </div>
-          <div style="position: absolute;bottom: 0px;padding-bottom: 5px;padding-left: 5px;">
-            <a href="/College-certification" style="display: block;width: 115px;height: 45px;background: #e0007c;padding: 10px;text-align: center;border-radius: 5px;color: white;font-weight: bold;">Read
-              more
-            </a> </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="one-third" style="background-image:url(/img/pexels-photo-1462631.jpeg);height:300px;width:300px;border:0px;padding:0px;position:relative">
-          <div style="padding: 5px;background: rgba(0, 0, 0, 0.5);height: 50%;"> <a href="/sqa" style="color:#fff;text-decoration:none;font-weight:bold;">
-              SQA</a> </div>
-          <div style="position: absolute;bottom: 0px;padding-bottom: 5px;padding-left: 5px;">
-            <a href="/sqa" style="display: block;width: 115px;height: 45px;background: #e0007c;padding: 10px;text-align: center;border-radius: 5px;color: white;font-weight: bold;">Read
-              more
-            </a> </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="one-third" style="background-image:url(/img/pexels-photo-1438081.jpeg);height:300px;width:300px;border:0px;padding:0px;position:relative">
-          <div style="padding: 5px;background: rgba(0, 0, 0, 0.5);height: 50%;"> <a href="/ecd" style="color:#fff;text-decoration:none;font-weight:bold;">
-              ECD</a> </div>
-          <div style="position: absolute;bottom: 0px;padding-bottom: 5px;padding-left: 5px;">
-            <a href="/ecd" style="display: block;width: 115px;height: 45px;background: #e0007c;padding: 10px;text-align: center;border-radius: 5px;color: white;font-weight: bold;">Read
-              more
-            </a> </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <br>
-  <br>
-  <br>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h2>College Certification</h2>
-        <p>Learners can take a range of courses at different levels and receive college certification and recognition for
-          learning. Introductory courses are for those with little or no experience of using a computer or digital device.
-          The introductory courses cover a range of skills such as using office applications, file management up to developing
-          mobile apps and web pages. Intermediate courses build upon skills developed through the introductory courses and
-          will generally lead to preparing learners for ECDL assessments or further study in other programmes </p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">View details &raquo;</a></p>
-      </div>
-      <div class="col-md-6">
-        <h2>SQA</h2>
-        <p>The SQA units available in Flexible learning are aimed at SCQF levels 3 and 4. These units have been chosen as
-          they combine well with our introductory and intermediate college certificated courses. The level 3 courses in Using
-          A Keyboard and the NPA in Digital Literacies which comprises the Computer Basics, Digital Skills and Computer Applications
-          units. These can be achieved as stand-alone units but all three must be completed to receive the NPA in Digital
-          Literacies. At level 4 the PC Passport NPA again is comprised of three units: Web Apps: Word Processing, Web Apps:
-          Spreadsheets and Web Apps: Presentations. These again can be achieved as stand-alone units but all three must be
-          completed to receive the NPA.
-        </p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">View details &raquo;</a></p>
-      </div>
-      <div class="col-md-6">
-        <h2>ECD</h2>
-        <p>The European Computer Driving Licence is an SCQF level 5 course made up of 7 units. All 7 units must be completed
-          to achieve your certificate. The units are mainly practical - from using office applications, managing files and
-          using the internet and email applications. There are also a couple of units which require you to demonstrate knowledge
-          and understanding of IT security and the fundamentals of using the operating system.
-        </p>
-        <p> <a class="btn btn-primary btn-lg" href="#" role="button">View details </a></p>
-      </div>
-    </div>
   </div>
   <hr>
-</section>
+  <div>
+      <h2>At the moment, the centre is open Monday to Friday</h2>
+    </div>
+ <hr>
+  <table class="table">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Monday</th>
+        <th>Tuesday</th>
+        <th>Wednesday</th>
+        <th>Thurday</th>
+        <th>Friday</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row"> AM 9:30 - 12:15</th>
+        <td>NO Tutor</td>
+        <td>Tutor on Duty</td>
+        <td>Tutor on Duty</td>
+        <td>Tutor on Duty</td>
+        <td>Tutor on Duty</td>
+      </tr>
+      <tr>
+        <th scope="row"> PM 1 - 4:15</th>
+        <td>NO Tutor</td>
+        <td>Tutor on Duty</td>
+        <td>Tutor on Duty</td>
+        <td>Tutor on Duty</td>
+        <td>Tutor on Duty</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
+  <section class="card">
+    <div class="container">
+      <h1 class="medio-title">Course Department</h1>
+    </div>
+    <section class="section">
+      <div class="container">
+        <hr>
+        <div id="accordion" role="tablist" aria-multiselectable="true">
+          <div class="card">
+            <div style="font-size: 2em; color: right; background: #00adee; " class="card-header" role="tab" id="headingOne">
+              <h5 class="mb-0">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <h1>College Certification</h1>
+                </a>
+              </h5>
+            </div>
+            <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
+              <div class="card-block">
+                <h2> <a class="dropdown-item" href="#">Introduction and Intermediate Word Processing</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Introduction and Intermediate Spreadheets</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Introduction and Intermediate Presentation Software</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Introduction and Intermediate Database</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Introduction and Intermediate Email</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Introduction and Intermediate Internet</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Introduction to file Management</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Introduction and Intermediate Mobile App Development</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Introdiction to Office 365 Web Apps </a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Introdiction to coding</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Introdiction to Cyber Security</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Introdiction to web Development</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Introdiction to the Internet of Thing</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Introdiction to Digital Markething</a></h2>
+                <hr>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div style="font-size: 2em; color: right; background: #00adee;" class="card-header" role="tab" id="headingTwo">
+              <h5 class="mb-0">
+                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  <h1>SQA</h1>
+                </a>
+              </h5>
+            </div>
+            <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
+              <div class="card-block">
+                <h2> <a class="dropdown-item" href="#">Using A Keyboard</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Computer Basics</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Digital Skills</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Computer Applications</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">PC Passport- WEB Apps: Word processing</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">PC Passport- Web Apps: Spreadheets</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">PC Passport- Web Apps: Presentations</a></h2>
+                <hr>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div style="font-size: 2em; color: right; background: #00adee;" class="card-header" role="tab" id="headingThree">
+              <h5 class="mb-0">
+                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  <h1>ECDL</h1>
+                </a>
+              </h5>
+            </div>
+            <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
+              <div class="card-block">
+                <h2> <a class="dropdown-item" href="#">Unit 1 -IT Security</a></h2> 
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Unit 2 -IT User Fundamentals</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Unit 3 -IT Word Precessing</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Unit 4 -IT Spreadheets</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Unit 5 -IT Datanases</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Unit 6 - Presentations</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Unit 7 -Internet & Email</a></h2>
+                <hr>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div style="font-size: 2em; color: right; background: #00adee;" class="card-header" role="tab" id="headingThree">
+              <h5 class="mb-0">
+                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  <h1>Codeworks Course</h1>
+                </a>
+              </h5>
+            </div>
+            <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
+              <div class="card-block">
+                <h2> <a class="dropdown-item" href="#">Getting Started with Codeworks</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Codeworks Digital</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Codeworks Developer</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Codeworks Pro</a></h2>
+                <hr>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div style="font-size: 2em; color: right; background: #00adee;" class="card-header" role="tab" id="headingThree">
+              <h5 class="mb-0">
+                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  <h1> Certification</h1>
+                </a>
+              </h5>
+            </div>
+            <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
+              <div class="card-block">
+                <h2> <a class="dropdown-item" href="#">NPA Digital Literacies – SCQF Level 3</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">NPA PC Passport – Web Apps – SCQF Level 4</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">Codeworks Developer Certificate</a></h2>
+                <hr>
+                <h2> <a class="dropdown-item" href="#">PDA Web Development</a></h2>
+                <hr>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr>
+    </section>
+   
