--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,4 +1,5 @@
 body {
+  font-family: "Lato", sans-serif;
   background: #fcadeb; /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #cc95c0, #dbd4b4, #7aa1d2); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #cc95c0, #dbd4b4, #7aa1d2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */}
@@ -29,6 +30,8 @@ img {
   position: relative;
   font-family: Arial;
 }
+
+
 
 /* Home*/
 
@@ -74,6 +77,11 @@ img {
   overflow-y: hidden;
  }
 
+ #All-courses .container{
+   margin:2px solid;
+   padding:4px;
+ }
+ 
 #All-courses h1 {
  
  color: aliceblue;
@@ -83,6 +91,14 @@ img {
 .medio-title{
   font-size: 3rem;
   text-align: left;
+}
+
+.table th {
+  color :black;
+ font-size: 1.5rem;
+}
+.table td {
+  font-size: 1rem;
 }
 
 
@@ -162,7 +178,7 @@ img {
 #College-certification {
   margin: 0;
   padding: 0;
-  background: url("/img/College-certification.jpg") no-repeat center/cover;
+  background: url("/img/student-charter.jpg") no-repeat center/cover;
   width: 100%;
   height: 100vh;
   position: relative;
@@ -239,6 +255,14 @@ img {
   font-size: 4rem;
   margin-bottom: 0;
 }
+
+/* Student-details */
+#details.card-header{
+position: relative;
+}
+
+
+
 
 /* Contact */
 
