--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -3,46 +3,6 @@
 
     <div style="background-color: ;">
         <div class="container">
-
-            <!-- Grid row-->
-            <div class="row py-4 d-flex align-items-center">
-
-                <!-- Grid column -->
-                <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-                    <h6 class="mb-0">Get connected with us on social networks!</h6>
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-6 col-lg-7 text-center text-md-right">
-
-                    <!-- Facebook -->
-                    <a class="fb-ic">
-                        <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i> 
-                    </a>
-                    <!-- Twitter -->
-                    <a class="tw-ic">
-                        <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                    </a>
-                    <!-- Google +-->
-                    <a class="gplus-ic">
-                        <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                    </a>
-                    <!--Linkedin -->
-                    <a class="li-ic">
-                        <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x">  </i>
-                    </a>
-                    <!--Instagram-->
-                    <a class="ins-ic">
-                       <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                    </a>
-
-                </div>
-                <!-- Grid column -->
-
-            </div>
-            <!-- Grid row-->
-
         </div>
     </div>
 
@@ -80,9 +40,7 @@
                 <p>
                     <a class="dark-grey-text" href="#!">Contact</a>
                 </p>
-                <p>
-                    <a class="dark-grey-text" href="#!">Regist</a>
-                </p>
+                
 
             </div>
             <!-- Grid column -->
@@ -91,19 +49,13 @@
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
 
                 <!-- Links -->
-                <h6 class="text-uppercase font-weight-bold">Useful links</h6>
+                <h6 class="text-uppercase font-weight-bold">Useful</h6>
                 <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p>
                     <a class="dark-grey-text" href="#!">Your Account</a>
                 </p>
                 <p>
-                    <a class="dark-grey-text" href="#!">Become an Affiliate</a>
-                </p>
-                <p>
-                    <a class="dark-grey-text" href="#!">Shipping Rates</a>
-                </p>
-                <p>
-                    <a class="dark-grey-text" href="#!">Help</a>
+                    <a class="dark-grey-text" href="#!">Regist</a>
                 </p>
 
             </div>
