--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -7,36 +7,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item dropdown active">
-          <a class="nav-link dropdown-toggle" href="/about" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
-            About Us
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/about">About</a>
-            <a class="dropdown-item" href="/our-performarce">Our Performarce</a>
-          </div>
+         <li class="nav-item dropdown active">
+          <a class="navbar-brand" href="/about"> About Us</a>
+        </li>
         </li>
         <li class="nav-item dropdown active">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
-            Courses
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/media">Courses 2019/20</a>
-            <a class="dropdown-item" href="/how-aply">How to apply</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown active">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
-            Students
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/general-information">General Information</a>
-            <a class="dropdown-item" href="/student-charter">Student Carater</a>
-            <a class="dropdown-item" href="/student-welcome">Student Welcome</a>
-          </div>
+          <a class="navbar-brand" href="/media"> Courses</a>
+        </li>  
         </li>
         <li class="nav-item dropdown active">
           <a class="navbar-brand" href="/contact">Contact</a>
@@ -44,36 +21,25 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         {{#if user}}
-        <li class="nav-item dropdown active">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
-            Perfil
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/notes">All comment</a>
-            <a class="dropdown-item" href="/notes/add">Add A comment</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/users/logout">Logout</a>
-          </div>
-          </li>
             <li class="nav-item dropdown active">
              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
-            Applications
+            {{user.name}}
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/applications">All Applications</a>
-            <a class="dropdown-item" href="/applications/add">Add An Application</a>
+            <a class="dropdown-item" href="/student-details">View Profile</a>
+             <a class="dropdown-item" href="/edit-details"> Edit Profile</a>
+            <a class="dropdown-item" href="/add-achievements">add  Achievements</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/users/logout">Logout</a>
           </div>
         </li>
         {{else}}
-        <li class="nav-item active">
-          <a class="nav-link" href="/users/signin">Login</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="/users/signup">Register</a>
+        <li class="nav-item dropdown active">
+          <a class="navbar-brand" href="/users/signin">Login</a>
+        </li> 
+        <li class="nav-item dropdown active">
+          <a class="navbar-brand" href="/users/signup">Register</a>
         </li>
         {{/if}}
       </ul>
