--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -12,6 +12,9 @@
           <div class="form-group">
             <input type="email" class="form-control" name="email" placeholder="Email" value="{{email}}">
           </div>
+           <div class="form-group">
+            <input type="date" class="form-control" name="date" placeholder="Date" value="{{date}}">
+          </div>
           <div class="form-group">
             <input type="password" class="form-control" name="password" placeholder="Password" value="{{password}}">
           </div>
