add achievement at student-details

--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -29,7 +29,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/student-details">View Profile</a>
              <a class="dropdown-item" href="/edit-details"> Edit Profile</a>
-            <a class="dropdown-item" href="/add-achievements">add  Achievements</a>
+            <a class="dropdown-item" href="/student-details">add Achievements</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/users/logout">Logout</a>
           </div>
