I was modifying the part of the achievements

--- a/src/views/all-achievements.hbs
+++ b/src/views/all-achievements.hbs
@@ -1,7 +1,7 @@
-<div class="row">
+{{!-- <div class="row">
   {{!-- {{#each achievemens}} --}}
-   {{#each achievemens}}
-  <div class="col-md-3">
+   {{!-- {{#each achievemens}} --}}
+  {{!-- <div class="col-md-3">
     <div class="card">
          <h5 class="card-title">this is title{{ title }}</h5> 
         <h4>this are achievements</h4>
@@ -9,6 +9,6 @@
         <p>{{ description }}</p>
       </div>
   </div>
-   {{/each}}
+   {{/each}} --}}
   {{!-- {{/each}} --}}
-</div>
+{{!-- </div> --}} 
