--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -36,7 +36,7 @@
   </a>
 </div>
 <hr>
-<button type="button" class="btn btn-danger btn-lg btn-block">Search All Courses</button>
+<button type="button"  href="/media" class="btn btn-danger btn-lg btn-block"><a href="/media" >Search All Courses</a></button>
 <section id="main2" class="section">
   <div class="container">
     <h2 class="section-head">
@@ -75,7 +75,7 @@
           <p> <a class="btn btn-primary btn-lg" href="#" role="button">View details </a></p>
         </div>
       </div>
-      <a class="btn btn-primary btn-lg" href="#" role="button">Glasgow Kelvin College </a>
+      <a class="btn btn-primary btn-lg" href="https://www.glasgowkelvin.ac.uk/courses/" role="button">Glasgow Kelvin College </a>
       <hr>
       <img src="img/smartmockups_jsnmff9q.png" alt="smartckps">
       <hr>
