--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -32,13 +32,13 @@
                 <h6 class="text-uppercase font-weight-bold">Media</h6>
                 <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p>
-                    <a class="dark-grey-text" href="#!">Home</a>
+                    <a class="dark-grey-text" href="/">Home</a>
                 </p>
                 <p>
-                    <a class="dark-grey-text" href="#!">Media</a>
+                    <a class="dark-grey-text"href="/media">Media</a>
                 </p>
                 <p>
-                    <a class="dark-grey-text" href="#!">Contact</a>
+                    <a class="dark-grey-text" href="/contact">Contact</a>
                 </p>
                 
 
@@ -52,10 +52,10 @@
                 <h6 class="text-uppercase font-weight-bold">Useful</h6>
                 <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p>
-                    <a class="dark-grey-text" href="#!">Your Account</a>
+                    <a class="dark-grey-text" href="/users/signin">Your Account</a>
                 </p>
                 <p>
-                    <a class="dark-grey-text" href="#!">Regist</a>
+                    <a class="dark-grey-text" href="/users/signup">Regist</a>
                 </p>
 
             </div>
