--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -9,12 +9,12 @@
     <div class="carousel-item active">
       <img src="/img/pexels-photo-1438081.jpeg" alt="aply">
       <div class="carousel-caption d-none d-md-block">
-        <h3>COUSES OPEN NOW</h3>
+        <h3>COURSES OPEN NOW</h3>
         <h1>FOR THIS YEAR</h1>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/img/smartmockups_jsqduow0.jpg" alt="aply">
+      <img src="/img/achievements.jpg" alt="aply">
       <div class="carousel-caption d-none d-md-block">
         <h2>THE FASHION COLLECTIVE</h2>
       </div>
