i fixt the part for the title

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -40,7 +40,7 @@
 <section id="main2" class="section">
   <div class="container">
     <h2 class="section-head">
-      <i class="fas fa-main"></i>Search All Ours Cuorses For This Year 2019</h2>
+      <i class="fas fa-main"></i>Search All Ours Courses For This Year 2019</h2>
     <hr class="my-4">
     <div class="container">
       <div class="row">
