--- a/src/views/media.hbs
+++ b/src/views/media.hbs
@@ -9,8 +9,8 @@
       <h2>At the moment, the centre is open Monday to Friday</h2>
     </div>
  <hr>
-  <table class="table">
-    <thead>
+  <table class="table table-responsive">
+  <thead>
       <tr>
         <th></th>
         <th>Monday</th>
