--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -311,18 +311,15 @@ position: relative;
 
 }
 @media screen and (max-width: 780px) {
-  .table-responsive{  
-    width: 100%;
-    overflow-y: hidden;
+  .table{  
     background-color: aqua;
-    font-family: serif;
-    margin: 5px top;
+    font-size: 1px;
+    width: 95%;
    
-
   }
   .dropdown-item{
     font-size: 15px;
-    width: 100%;
+    width: 25%;
   }
 }
 @media screen and (max-width: 480px) {
