--- a/src/views/media.hbs
+++ b/src/views/media.hbs
@@ -9,7 +9,8 @@
       <h2>At the moment, the centre is open Monday to Friday</h2>
     </div>
  <hr>
-  <table class="table table-responsive">
+ <div style="overflow-x:auto;">
+  <table class="table">
   <thead>
       <tr>
         <th></th>
@@ -39,6 +40,7 @@
       </tr>
     </tbody>
   </table>
+  </div>
   <hr>
   <section class="card">
     <div class="container">
